# microlauncher

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  Info.plist.in  README.md  flake.nix  format.sh  gobject_util.c  gobject_util.h  gtk_util.c  gtk_util.h  io.github.lassebq.microlauncher.desktop  json_util.c  json_util.h  manifest.c  manifest.h  meson.build  meson.options  microlauncher.c  microlauncher.h  microlauncher_account.c  microlauncher_account.h  microlauncher_gui.c  microlauncher_gui.h  microlauncher_instance.c  microlauncher_instance.h  microlauncher_msa.c  microlauncher_msa.h  microlauncher_types.h  microlauncher_version_item.c  microlauncher_version_item.h  util.c  util.cpp  util.h  xdgutil.c  xdgutil.h
.github/workflows/: cmake.yml
assets/: grass.blend  resources.gresource.xml
include/: microlauncher.h  microlauncher_account.h  microlauncher_gui.h  microlauncher_instance.h  microlauncher_java_runtime.h  microlauncher_msa.h  microlauncher_version_item.h
include/util/: gobject_util.h  gtk_util.h  json_util.h  util.h  xdgutil.h
nix/: package.nix  shell.nix
src/: gobject_util.c  gtk_util.c  json_util.c  microlauncher.c  microlauncher_account.c  microlauncher_gui.c  microlauncher_instance.c  microlauncher_java_runtime.c  microlauncher_msa.c  microlauncher_version_item.c  util.c  util.cpp  xdgutil.c
